--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,9 +2,14 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
+    "typeRoots": ["./node_modules/@types", "./src/**/*.d.ts"],
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "incremental": true,
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -19,8 +24,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
 }
