--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-use-measure": "^2.1.1",
     "tailwindcss": "^4.0.0",
     "three": "^0.172.0",
+    "vite-plugin-glsl": "^1.3.1",
     "vitest": "^3.0.2",
     "zustand": "^5.0.3"
   },
