--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/drei": "^9.121.2",
     "@react-three/fiber": "^8.17.12",
     "@tailwindcss/vite": "^4.0.0",
+    "immer": "^10.1.1",
     "leva": "^0.10.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
