--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@gltf-transform/view": "^4.1.1",
     "@react-three/drei": "^9.121.2",
     "@react-three/fiber": "^8.17.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "leva": "^0.10.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-use-measure": "^2.1.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
     "vite-plugin-glsl": "^1.3.1",
     "vitest": "^3.0.2",
@@ -32,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.13.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
