--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@gltf-transform/extensions": "^4.1.1",
     "@gltf-transform/functions": "^4.1.1",
     "@gltf-transform/view": "^4.1.1",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-switch": "^1.1.3",
     "@react-three/drei": "^9.121.2",
     "@react-three/fiber": "^8.17.12",
     "class-variance-authority": "^0.7.1",
@@ -26,6 +30,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.3.5",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^3.0.1",
