--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.3.5",
+    "react-number-format": "^5.4.4",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
