--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^9.121.2",
     "@react-three/fiber": "^8.17.12",
     "class-variance-authority": "^0.7.1",
