--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "ktx2-encoder": "^0.5.1",
     "lucide-react": "^0.540.0",
     "meshoptimizer": "^0.24.0",
     "next-themes": "^0.4.6",
